@@ -19,6 +19,6 @@ EBUILD guile-1.6.8.ebuild 2280 RMD160 2d7b9ba695bc7d76751ecfa36372fa4745c81e51 S
 EBUILD guile-1.8.1-r3.ebuild 2409 RMD160 2c2964330ef8a73fe1abdd234d7fade88f8ffaf1 SHA1 a96f78b22cc94c5f75ba3da11ee78a4a6136fa57 SHA256 d37bd16fc8fd75281189208abfaa148e879bd66a8ea066d3d90d927f3084d15a
 EBUILD guile-1.8.2.ebuild 2375 RMD160 f27c919ce7b656281fd4c012c3f44387c5fe5312 SHA1 10bdcb3a5e42dd517b8095c5dfd0da86fa5839f4 SHA256 56583e4df8376243240060b440e94aea7e9fa265035317718fd07bc8bf34b684
 EBUILD guile-1.8.3-r1.ebuild 1882 RMD160 bf9d498091ea7c10d18f1b8a27a8938d8ba39d93 SHA1 17ab35332374980ca56fd629d37a08f0f65b3012 SHA256 53880eda563b745f1ee45caf3d39006565daff1dc563fe0fdf9593edf308f718
-EBUILD guile-1.8.3-r25.ebuild 1992 RMD160 7b77188d9a50ad6fff68b66cbd0192f9f120cdbe SHA1 68ae96d1f5a58b499524f2413b08626806566e28 SHA256 8fc04bb5cee6e2a6839e02e032241ac39a2793f43989a40ada81354bc46e33b4
-MISC ChangeLog 12416 RMD160 f4cbf204f216ab2bddfc32fdaa94ee1393dc1316 SHA1 8a4eb9672d2b95ef449fdbb7674bbfa3740da9d4 SHA256 8dafba07efbc5b0dcdd4cda2a9a9f7a00639195dc1fddd9a61418278c436080c
+EBUILD guile-1.8.3-r25.ebuild 2127 RMD160 e8a2ada4c177efb3c314596557bbc1031833c834 SHA1 0db5a4156dee0263de307ec0a99f45e7168a0a0f SHA256 55642893d5addc912a41341976d6dacb63fe6daad8e184e24e60385566370912
+MISC ChangeLog 12516 RMD160 b9fe8e62d40f5c60311d0b8a9828e5b704d0f7e0 SHA1 feae034c0c41131be39f5eda69a80a7264f03c23 SHA256 05817b88626c95dc58b1a8279791341783fbd75d94820724af9d534b8ad0e4f4
 MISC metadata.xml 555 RMD160 fd6eaba195ffdfb9189735c30a58f1da1600ee3c SHA1 b22e226e21b88b7124ab9365a4ba91f19ecc4ee0 SHA256 d167df240a4a0ff64e824febc1ace682c334ca7005eec9399551b35069d0e99e
