@@ -1,6 +1,9 @@
 # ChangeLog for dev-scheme/guile
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/guile/ChangeLog,v 1.35 2007/12/14 13:49:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/guile/ChangeLog,v 1.36 2007/12/17 22:33:23 hkbst Exp $
+
+  17 Dec 2007; Marijn Schouten <hkBst@gentoo.org> guile-1.8.3-r25.ebuild:
+  fix /-prefix install
 
   14 Dec 2007; Jeroen Roovers <jer@gentoo.org> guile-1.8.2.ebuild:
   Stable for HPPA (bug #178360).
